--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,9 +85,15 @@ if (ENABLE_FUZZING)
 endif ()
 
 if (ENABLE_COVERAGE)
-    string(APPEND CMAKE_C_FLAGS " -fprofile-instr-generate -fcoverage-mapping")
-    string(APPEND CMAKE_CXX_FLAGS " -fprofile-instr-generate -fcoverage-mapping")
-    string(APPEND CMAKE_LINKER_FLAGS " -fprofile-instr-generate -fcoverage-mapping")
+    if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        string(APPEND CMAKE_C_FLAGS " -fprofile-instr-generate -fcoverage-mapping")
+        string(APPEND CMAKE_CXX_FLAGS " -fprofile-instr-generate -fcoverage-mapping")
+        string(APPEND CMAKE_LINKER_FLAGS " -fprofile-instr-generate -fcoverage-mapping")
+    elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+        string(APPEND CMAKE_C_FLAGS " --coverage")
+        string(APPEND CMAKE_CXX_FLAGS " --coverage")
+        string(APPEND CMAKE_LINKER_FLAGS " --coverage")
+    endif ()
 endif ()
 
 if (ENABLE_SANITIZERS)
