--- a/.github/workflows/check_version.yml
+++ b/.github/workflows/check_version.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   configure:
-    runs-on: ubuntu-latest
+    runs-on: ${{ github.repository_owner == 'zondax' && 'zondax-runners' || 'ubuntu-latest' }}
     outputs:
       uid_gid: ${{ steps.get-user.outputs.uid_gid }}
     steps:
@@ -21,7 +21,7 @@ jobs:
 
   get_version:
     needs: configure
-    runs-on: ubuntu-latest
+    runs-on: ${{ github.repository_owner == 'zondax' && 'zondax-runners' || 'ubuntu-latest' }}
     container:
       image: zondax/ledger-app-builder:latest
       options: --user ${{ needs.configure.outputs.uid_gid }}
@@ -40,7 +40,7 @@ jobs:
 
   check_app_version:
     needs: get_version
-    runs-on: ubuntu-latest
+    runs-on: ${{ github.repository_owner == 'zondax' && 'zondax-runners' || 'ubuntu-latest' }}
     steps:
       - id: checkTag
         uses: mukunku/tag-exists-action@v1.0.0
