wip - apex support

--- a/app/Makefile.rust
+++ b/app/Makefile.rust
@@ -22,7 +22,7 @@ RUST_TARGET := thumbv6m-none-eabi
 RUST_TARGET_NAME := $(TARGET_NAME)
 
 # This is to support Flex in the ledger-rust dependency 
-NBGL_TARGETS := TARGET_STAX TARGET_FLEX
+NBGL_TARGETS := TARGET_STAX TARGET_FLEX TARGET_APEX_P
 ifeq ($(TARGET_NAME),$(filter $(TARGET_NAME), $(NBGL_TARGETS)))
 RUST_TARGET_NAME := TARGET_STAX
 endif
